Bug 216804 - Lenovo IdeaPad 5 Flex 14ALC7 trackpad does not work past 5.19.10, patch in 6.1 has no effect
Summary: Lenovo IdeaPad 5 Flex 14ALC7 trackpad does not work past 5.19.10, patch in 6....
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: I2C (show other bugs)
Hardware: AMD Linux
: P1 normal
Assignee: Drivers/I2C virtual user
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-13 03:13 UTC by Michael Salzer
Modified: 2023-03-15 09:43 UTC (History)
4 users (show)

See Also:
Kernel Version: 6.1
Tree: Mainline
Subsystem:
Regression: Yes


Attachments
lspci -vvv (15.58 KB, text/plain)
2022-12-13 03:13 UTC, Michael Salzer
Details
Output of dmidecode (15.81 KB, text/plain)
2022-12-13 14:23 UTC, Michael Salzer
Details
Patch v1 (1.85 KB, patch)
2022-12-13 20:44 UTC, Adrian Freund
Details | Diff
Patch for the Lenovo IdeaPad Flex 5 14ABR8 (354 bytes, patch)
2023-03-03 14:15 UTC, Julien Delarocque
Details | Diff

Description Michael Salzer 2022-12-13 03:13:22 UTC
Created attachment 303397 [details]
lspci -vvv

The patch (https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/?id=bfcdf58380b1d9be564a78a9370da722ed1a9965) included in 6.1 to resolve the breakage introduced in 5.19.10 (https://lore.kernel.org/all/CAJsYDVKXxzOr_UqN-rU06JxbAqs07dzF=8QP_dmebNBDUDfTqg@mail.gmail.com/) does not have any effect on my Lenovo IdeaPad 5 Flex 14ALC7.

Output of lspci -vvv attached.
Comment 1 The Linux kernel's regression tracker (Thorsten Leemhuis) 2022-12-13 05:58:51 UTC
Could you please attach the output of "dmidecode" on your machine
Comment 2 Michael Salzer 2022-12-13 14:23:37 UTC
Created attachment 303401 [details]
Output of dmidecode
Comment 3 Adrian Freund 2022-12-13 19:31:24 UTC
CC: Mario Limonciello

This is related to https://bugzilla.kernel.org/show_bug.cgi?id=216118. The patch for that issue broke input devices on multiple other laptops.

One report (GPD Win Max2) was as a comment on that thread.
One person reported an issue for Lenovo IdeaPad 5 Flex 16ALC7 on the suse bugzilla (https://bugzilla.suse.com/show_bug.cgi?id=1203794), which was fixed with the commit Michael Salzer linked in this bug report (https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/?id=bfcdf58380b1d9be564a78a9370da722ed1a9965).

I can confirm that the issue still persists on Lenovo IdeaPad 5 Flex 14ALC7, because its DMI device has name 82R9 (16ALC7 has 82RA).
I'll send a patch adding 82R9 to the dmi override list to the mailing list, but seeing that at least three different devices from two different manufacturers are affected a general solution would probably be better than trying to keep a list of overrides (if that is even possible).
Comment 4 Adrian Freund 2022-12-13 20:44:31 UTC
Created attachment 303403 [details]
Patch v1

Here's a patch that fixes the problem on the 14ALC7. I've also sent it to the mailing list.
Comment 5 Adrian Freund 2022-12-30 19:10:30 UTC
The fix for Lenovo IdeaPad 5 Flex 14ALC7 was just merged into linux mainline and will probably be in 6.2-rc2 and later the 6.2 release.
Comment 6 Adrian Freund 2023-02-20 10:03:16 UTC
The fix was just released with Linux 6.2 It has also been backported to all still supported stable kernels.

Can you verify that this issue is solved and close it?
Comment 7 Michael Salzer 2023-03-01 17:23:50 UTC
Resolved as of 6.2
Comment 8 Julien Delarocque 2023-03-03 14:15:51 UTC
Created attachment 303836 [details]
Patch for the Lenovo IdeaPad Flex 5 14ABR8
Comment 9 Julien Delarocque 2023-03-03 14:17:27 UTC
This also affects the Lenovo IdeaPad Flex 5 14ABR8 (DMI name 82XX). I have attached an analogous patch solving the problem for me on Linux 6.2.1 (last kernel working unpatched was 5.19.9).
Comment 10 The Linux kernel's regression tracker (Thorsten Leemhuis) 2023-03-07 09:57:44 UTC
(In reply to Julien Delarocque from comment #9)
> I have attached an analogous patch solving the problem for me on Linux 6.2.1 

The patch won't be seen by the right people here. It needs to be send to the mailing lists with a proper commit message. Could you do that yourself, or do you need help with that?
Comment 11 Julien Delarocque 2023-03-08 23:11:19 UTC
(In reply to The Linux kernel's regression tracker (Thorsten Leemhuis) from comment #10)

> The patch won't be seen by the right people here. It needs to be send to the
> mailing lists with a proper commit message. Could you do that yourself, or
> do you need help with that?

Yes, some help would be great... Sorry.
Comment 12 The Linux kernel's regression tracker (Thorsten Leemhuis) 2023-03-11 15:14:21 UTC
(In reply to Julien Delarocque from comment #11)
> (In reply to The Linux kernel's regression tracker (Thorsten Leemhuis) from
> comment #10)
> 
> > The patch won't be seen by the right people here. It needs to be send to
> the
> > mailing lists with a proper commit message. Could you do that yourself, or
> > do you need help with that?
> 
> Yes, some help would be great... Sorry.

Adrian, you recently deal with a problem like Julien's, could you maybe help getting Julien's patch improved, submitted, and merged? if not just say so, that's totally fine.
Comment 13 The Linux kernel's regression tracker (Thorsten Leemhuis) 2023-03-15 09:43:54 UTC
(In reply to Julien Delarocque from comment #11)

> Yes, some help would be great... Sorry.

Mario, if I understood things correctly, you where somewhat involved in the development of the patch that broke things (9946e39fe8d0 ("ACPI: resource: skip IRQ override on AMD Zen platforms")); do you maybe have a minute to take Julien's patch from Comment 8 and submit it properly.

/me now that he looked into this also wonders how much more systems need such a quirk...

Note You need to log in before you can comment on or make changes to this bug.